--- a/reservations/package.json
+++ b/reservations/package.json
@@ -10,6 +10,7 @@
     "dev": "OVERRIDE_DEFAULT_LOGGER=false && nodemon src/server.js --exec babel-node -e js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
